[package]
name = "thalora-browser-apis"
version = "0.1.0"
edition = "2024"
description = "Browser Web APIs for Thalora - extracted from Boa engine fork"
authors = ["Brainwires Team"]
license = "MIT"

[features]
default = ["native"]

# Native build - includes tokio, reqwest, wasmtime, etc.
native = [
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:reqwest",
    "dep:webrtc",
    "dep:wasmtime",
    "dep:sled",
    "dep:dirs",
    "dep:rodio",
    "dep:symphonia",
    "dep:wgpu",
    "dep:naga",
    "boa_engine/native",
]

# WASM build - excludes native-only dependencies
wasm = [
    "boa_engine/wasm",
]

[dependencies]
# Shared constants
thalora-constants = { path = "../../shared/thalora-constants" }

# Boa engine - required for JavaScript integration
boa_engine = { path = "../boa/core/engine", features = ["intl_bundled"], default-features = false }
boa_gc = { path = "../boa/core/gc" }

# Async runtime and utilities (native only)
tokio = { version = "1.0", features = ["full"], optional = true }
async-trait = "0.1"
futures-util = "0.3"
futures-channel = "0.3"
crossbeam-channel = "0.5"

# HTTP client for Fetch API (native only)
reqwest = { version = "0.11", features = ["json", "stream", "blocking", "rustls-tls"], default-features = false, optional = true }
bytes = "1.5"

# WebSocket support (native only)
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"], optional = true }

# URL handling (matching Boa)
url = "2.4"
urlencoding = "2.1"

# Regex for form validation
regex = "1.10"

# HTML/DOM parsing (matching Boa exact versions)
scraper = "0.20"
html5ever = "0.27"
kuchikiki = "0.8"

# Serialization (matching Boa)
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# IndexedDB persistent storage (native only - WASM uses web-sys IDB)
sled = { version = "0.34", optional = true }
dirs = { version = "5.0", optional = true }

# Base64 encoding (matching Boa)
base64 = "0.22"

# Collections (matching Boa)
indexmap = { version = "2.0", features = ["std"] }

# Error handling (matching Boa)
anyhow = "1.0"
thiserror = "1.0"

# Time handling
time = "0.3"

# Random number generation
rand = "0.8"

# Cryptography (Phase 4: SubtleCrypto)
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
p384 = { version = "0.13", features = ["ecdsa", "ecdh"] }
elliptic-curve = { version = "0.13", features = ["sec1"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
hkdf = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
digest = "0.10"
generic-array = "0.14"
zeroize = "1.7"

# WebRTC (native only) — Brainwires fork with 95%+ W3C compliance
webrtc = { git = "https://github.com/Brainwires/webrtc-rs", optional = true }

# WebAssembly runtime (native only - can't run wasmtime inside WASM)
wasmtime = { version = "21.0", features = ["component-model", "async", "runtime", "cranelift", "cache", "pooling-allocator"], optional = true }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# VFS for File System API (matching Boa path)
vfs = { path = "../../vfs", default-features = false }

# Other utilities
cfg-if = "1.0"
parking_lot = "0.12"
once_cell = "1.19"

# OS locale detection for navigator.language / navigator.languages
sys-locale = "0.3"

# Image processing (Phase 3: Media & Graphics)
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp", "bmp", "ico", "tiff"] }

# 2D Graphics rendering (Phase 3: Canvas)
tiny-skia = "0.11"
fontdb = "0.16"
rustybuzz = "0.12"

# Audio playback (Phase 3: Audio) - native only
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"], optional = true }
symphonia = { version = "0.5", features = ["mp3", "aac", "ogg", "wav", "flac"], optional = true }

# WebGL rendering (Phase 3: WebGL) - native only
wgpu = { version = "23.0", optional = true }
naga = { version = "23.0", features = ["wgsl-in", "glsl-in", "spv-out"], optional = true }

[dev-dependencies]
# For testing - Boa parser and macros to evaluate JavaScript in tests
boa_parser = { path = "../boa/core/parser" }
boa_macros = { path = "../boa/core/macros" }

[lib]
name = "thalora_browser_apis"
path = "src/lib.rs"
