[package]
name = "thalora-v8-engine"
version = "0.1.0"
edition = "2021"
description = "V8 JavaScript engine integration for Thalora headless browser using custom V8 fork"
authors = ["Brainwires Team"]
license = "MIT"

[dependencies]
# V8 JavaScript engine (rusty_v8) with custom V8 fork
# Using nightness/v8 fork instead of pre-built Chrome libraries
v8 = { version = "130.0", default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
tokio = { version = "1", features = ["sync", "time"] }
futures = "0.3"

# JSON serialization for interop
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Concurrency
parking_lot = "0.12"

# Collections
indexmap = "2.0"

[build-dependencies]
# For checking build tool availability
which = "6.0"

[features]
default = ["use_custom_v8"]
debug = ["v8/debug"]
use_custom_v8 = []

[lib]
name = "thalora_v8_engine"
path = "src/lib.rs"

# V8 build configuration for Thalora's custom fork
[package.metadata.v8]
repository = "https://github.com/nightness/v8.git"
branch = "main"
build_from_source = true

# Custom build configuration for V8
[package.metadata.rusty_v8]
use_custom_libcxx = false
v8_use_sysroot = false